<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controllers.Activities.MainActivity">

    <item
        android:id="@+id/menu_searchicon_item"
        android:icon="@drawable/ic_search_black_24dp"
        android:title=""
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_notifications_item"
        android:actionLayout="@layout/toolbar"
        android:title="@string/notifications" />

    <item
        android:id="@+id/menu_about_item"
        android:actionLayout="@layout/toolbar"
        android:title="@string/about"/>

</menu>